--- a/.github/actions/setup-build/action.yml
+++ b/.github/actions/setup-build/action.yml
@@ -16,7 +16,7 @@ runs:
   - name: Set up Python
     uses: actions/setup-python@v2
     with:
-      python-version: 3.9
+      python-version: '3.10'
 
   - name: Install MLIR Python depends
     run: |
