--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -25,7 +25,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os-arch: [ubuntu-x86_64, macos-arm64]
+        os-arch: [ubuntu-x86_64, macos-arm64, windows-x86_64]
         llvm-build: [in-tree, out-of-tree]
         torch-binary: [ON, OFF]
         exclude:
@@ -38,12 +38,16 @@ jobs:
           # Exclude macos-arm64 and llvm out-of-tree altogether
           - os-arch: macos-arm64
             llvm-build: out-of-tree
+          - os-arch: windows-x86_64
+            llvm-build: out-of-tree
         include:
           # Specify OS versions
           - os-arch: ubuntu-x86_64
             os: ubuntu-22.04
           - os-arch: macos-arm64
             os: macos-12
+          - os-arch: windows-x86_64
+            os: windows-latest
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -53,6 +57,7 @@ jobs:
         submodules: 'true'
 
     - name: Fetch PyTorch commit hash
+      if: ${{ matrix.os-arch != 'windows-x86_64' }}
       run: |
         PT_HASH="$(cat ${GITHUB_WORKSPACE}/pytorch-version.txt)"
         echo "PT_HASH=${PT_HASH}" >> ${GITHUB_ENV}
@@ -62,7 +67,14 @@ jobs:
       with:
         cache-suffix: ${{ matrix.os-arch }}-${{ matrix.llvm-build }}-${{ matrix.torch-binary }}
 
+    - name: Set up Visual Studio shell
+      if: ${{ matrix.os-arch == 'windows-x86_64' }}
+      uses: egor-tensin/vs-shell@v2
+      with:
+        arch: x64
+
     - name: Cache PyTorch Build
+      if: ${{ matrix.os-arch != 'windows-x86_64' }}
       id: cache-pytorch
       uses: actions/cache@v3
       with:
@@ -110,3 +122,8 @@ jobs:
       if: ${{ matrix.os-arch == 'macos-arm64' }}
       run: |
         cmake --build build_arm64
+    - name: Build torch-mlir (Windows)
+      if: ${{ matrix.os-arch == 'windows-x86_64' }}
+      shell: pwsh
+      run: |
+        ./build_tools/python_deploy/build_windows_ci.ps1
