--- a/lib/Dialect/Torch/Utils/CMakeLists.txt
+++ b/lib/Dialect/Torch/Utils/CMakeLists.txt
@@ -4,4 +4,8 @@ add_mlir_dialect_library(TorchMLIRTorchUtils
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir/Dialect/Torch/Utils
-  )
+
+  DEPENDS
+  MLIRTorchOpsIncGen
+  MLIRTorchTypesIncGen
+)
