ci: restrict PyTorch cache to just the main branch
If PyTorch build caches are created on a branch other than the main
branch, then GitHub does not share those caches with the main branch,
making every CI run that runs for each PR slow.  This patch resolves the
problem by letting only the main branch create and use PyTorch build
caches.

--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -73,8 +73,8 @@ jobs:
       with:
         arch: x64
 
-    - name: Cache PyTorch Build
-      if: ${{ matrix.os-arch != 'windows-x86_64' }}
+    - name: Cache PyTorch Build (if running on main branch)
+      if: github.ref_name == 'main' && matrix.os-arch != 'windows-x86_64'
       id: cache-pytorch
       uses: actions/cache@v3
       with:
