--- a/.github/workflows/RollPyTorch.yml
+++ b/.github/workflows/RollPyTorch.yml
@@ -68,7 +68,8 @@ jobs:
         git add pytorch-version.txt pytorch-requirements.txt lib/Dialect/Torch/Transforms/ShapeLibrary.cpp include/torch-mlir/Dialect/Torch/IR/GeneratedTorchOps.td
         git diff --cached --exit-code || (git commit -m "update PyTorch version to ${{ env.PT_RELEASE }}" && git push --set-upstream origin main)
 
-    - name: Update PyTorch Build Cache
+    - name: Update PyTorch Build Cache (if running on main branch)
+      if: github.ref_name == 'main'
       id: cache-pytorch
       uses: actions/cache@v3
       with:
